--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,9 @@
-asgiref               3.6.0  
-backports.zoneinfo    0.2.1  
-confusable-homoglyphs 3.2.0  
-Django                4.1.5  
-django-registration   3.3    
-django-widget-tweaks  1.4.12 
-pip                   20.0.2 
-pkg-resources         0.0.0  
-PyMySQL               1.0.2  
-python-dotenv         0.21.1 
-setuptools            44.0.0 
-sqlparse              0.4.3  
+asgiref==3.6.0
+backports.zoneinfo==0.2.1
+confusable-homoglyphs==3.2.0
+Django==4.1.5
+django-registration==3.3
+django-widget-tweaks==1.4.12
+PyMySQL==1.0.2
+python-dotenv==0.21.1
+sqlparse==0.4.3
