--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ confusable-homoglyphs==3.2.0
 Django==4.1.5
 django-registration==3.3
 django-widget-tweaks==1.4.12
+gunicorn==20.1.0
 PyMySQL==1.0.2
 python-dotenv==0.21.1
 sqlparse==0.4.3
