--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,24 @@
 asgiref==3.6.0
 backports.zoneinfo==0.2.1
+cffi==1.15.1
 confusable-homoglyphs==3.2.0
+contourpy==1.0.7
+cryptography==39.0.1
+cycler==0.11.0
 Django==4.1.5
 django-registration==3.3
 django-widget-tweaks==1.4.12
+fonttools==4.38.0
 gunicorn==20.1.0
+kiwisolver==1.4.4
+matplotlib==3.6.3
+numpy==1.24.2
+packaging==23.0
+Pillow==9.4.0
+pycparser==2.21
 PyMySQL==1.0.2
+pyparsing==3.0.9
+python-dateutil==2.8.2
 python-dotenv==0.21.1
+six==1.16.0
 sqlparse==0.4.3
