--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,15 @@ seolynn/seolynn/.env
 
 */*.db
 */*.sqlite
+*/*.sqlite3
 seolynn/db.sqlite3
 
 */__pycache__
 seolynn/seolynn/__pycache__
 seolynn/home/__pycache__
+
+.vscode
+
+nane.save
+
+*/__pycache__
